--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             var logo_header="Organised Chaos"; //If the logo needs any text displaying below it.. this is where to put that!
             var phone="07763314185"; //Main phone number for the company
             var email="admin@organisedchaos.org.uk"; //Main email address
-            var logo_style="width:50%; height:25%; display: block; margin-left: auto; margin-right: auto; max-height:347px; max-width:201px;";
+            var logo_style="width:50%; display: block; margin-left: auto; margin-right: auto; max-height:347px; max-width:201px;";
             var logo_header_style="color:#157dfb;";
              
              var theme="b";
