--- a/rex.html
+++ b/rex.html
@@ -35,11 +35,11 @@
                 </div>
                 <a data-rel="back" data-icon="carat-l" data-iconpos="notext" data-theme="a"  data-shadow="false"  data-iconshadow="false"  data-inline="true"></a>
             </div><!-- /header -->
-            <div data-role="content" data-iscroll><!-- content -->
+            <div data-role="content" data-iscroll class="spare-page"><!-- content -->
                
 
                 <div style="">
-                    <img style=" max-width:298px; max-height:290px; width:75%; height:25%; display: block; margin-left: auto; margin-right: auto; " src="images/rex.jpg"/> <!-- ANY IMAGE NEEDED PLACE HERE-->
+                    <img style=" max-width:298px; max-height:290px; width:75%; display: block; margin-left: auto; margin-right: auto; " src="images/rex.jpg"/> <!-- ANY IMAGE NEEDED PLACE HERE-->
                 </div>
                 
                 <p align="center">Sensei Rex has been training since 1988 when he took up Sokudo with Professor Smith, he started teaching Sokudo in 1999. Since then he has been regulary teaching Sokudo and Kickboxing to all students at the Nippon Dai Martial Arts Academy. and although Rex has taught people of all ages he was mainly responsible for taking the junior members and this is were he found his niche. Rex has travelled and taught both in the UK and Europe and has also assisted in the delivery of Self Defence classes and Security Classes in the UK. Rex met his wife Michelle through martial arts and now has set his focus on the integration of Martial Arts into schools.<br/>
