--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             var logo_style="width:50%; display: block; margin-left: auto; margin-right: auto; max-height:347px; max-width:201px;";
             var logo_header_style="color:#157dfb;";
              
-             var theme="d";
+             var theme="a";
             
             //THESE APPEAR ON NAVIGATION BARS (KEEP SHORT-ISH)
             var nav1="Home";
