--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
              {
                  document.location.href = "#home";
              }
-             else
+             if (data=="0")
              {
                  document.location.href = "sorry.html";
              }
